fixed jumping tooltip bug

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -58,7 +58,7 @@ select,
 .tooltip {
     background-color: #fff;
     padding: 5px;
-    position: relative;
+    position: absolute;
     border-radius: 10px;
     width: fit-content;
     filter: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1)) drop-shadow(0 1px 1px rgb(0 0 0 / 0.06));
